Adjust page wrapper top margin to prevent top navbar from cutting off top of page.

--- a/zapread.com/Content/Site.css
+++ b/zapread.com/Content/Site.css
@@ -792,6 +792,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 
 .top-navigation #page-wrapper {
     margin-left: 0;
+    padding-top: 15px;
 }
 
 .top-navigation .navbar-nav .dropdown-menu > .active > a {
